--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css">
+    <script src="https://kit.fontawesome.com/237865f5a2.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
@@ -18,15 +19,31 @@
             overflow: hidden;
             text-align: right;
             display: inline;
-            padding-left: 600px;
+            margin-left: 600px;
+            color:rgba(137, 220, 220, 1);
+            font-size:25px;
         }
-        
+        .nav-bar a i{
+            margin-right:2px;
+        }
+    
         .company-name {
             display: inline-block;
-            font-size: 20px;
-            padding-bottom: 2px;
+            color:white;
+            font-size: 30px;
             text-align: left;
-            padding-left: 25px;
+            padding-right:10px;
+            padding-left: 10px;
+            margin-top: 10px;
+            background:linear-gradient(rgba(109, 248, 248, 1), rgba(109, 179, 248, 1));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .white-background {
+            background:#A4ACB2;
+            height: 90px;
+            padding-top: 10px;
+            padding-bottom: 10px;
         }
         
         a {
@@ -49,15 +66,7 @@
             position: fixed;
         }
         
-        .white-background {
-            background: #454545;
-            color: white;
-            height: 90px;
-            width: 1900px;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            margin-top: none;
-        }
+        
         
         .sub-menu {
             display: none;
@@ -90,18 +99,21 @@
             border-bottom: none;
         }
         
-        body {
-            background-color: #D3D3D3;
+        body{
+            background:rgba(218, 139, 139, 1);
+            background-size:cover;
+            animation:color-change 10s ease infinite;
         }
         
         .sign-up-form {
-            background-color: white;
-            height: 350px;
+            border:1px solid white;
+            background-color: inherit;
+            height: 385px;
             width: 530px;
             padding-top: 20px;
             padding-bottom: 5px;
             padding-left: 5px;
-            margin-left: 50px;
+            align-items:center;
             margin-top: 50px;
         }
         
@@ -122,9 +134,9 @@
         }
         
         .submit-button {
-            border: 1px solid gray;
-            color: white;
-            background-color: gray;
+            border: 1px solid black;
+            color: black;
+            background-color:white;
             padding: 7px 7px 7px 7px;
             margin-left: 10px;
             margin-top: 7px;
@@ -132,25 +144,41 @@
             text-align: center;
             cursor: pointer;
         }
+        @keyframes color-change{
+            0% {background-color:#6978C9;}
+        50% {background-color:#FFB9AE}
+        100% {background-color:#48B5CF}
+        }
+        #profile-pic {
+            font-size:50px;
+            padding:15px;
+            border-radius:50%;
+            margin-left:200px;
+            color:white;
+            font-weight:1;
+            background-color: inherit;
+            
+            
+        }
     </style>
 </head>
 
 <body>
     <div class="white-background">
-        <a href="/home" class="company-name"><img src="https://i.ibb.co/HrPwhKr/logo.png" alt="logo" width="190px;display:inline;"></a>
+        <a href="/home" class="company-name">OPEN VISION</a>
         <div class="nav-bar">
-            <a href="/home" class="nav-bar-links"><i class="fa fa-home" style="color:black;font-size:24px;"></i> Home</a> {% if current_user.id == 1%}
-            <a href="/dashboard" class="nav-bar-links"><i class="fa fa-graduation-cap" style="color:black;font-size:24px;"></i></i>Dashboard</a> {% else%}
-            <a href="/dashboard" class="nav-bar-links"><i class="fa fa-graduation-cap" style="color:black;font-size:24px;"></i></i>Attendance</a> {%endif%}
-            <a href="/contact" class="nav-bar-links"><i class="fa  fa-phone" style="color:black;font-size:24px;"></i> Contact</a>
-            <a href="/about" class="nav-bar-links"><i class="fa fa-info" style="color:black;font-size:24px;"></i> About</a>
+            <a href="/home" class="nav-bar-links"><i class="fa fa-house" style="font-size:24px;"></i>Home</a> {% if current_user.id == 1 %}
+            <a href="/dashboard" class="nav-bar-links"><i class="fa fa-graduation-cap" style="font-size:24px;"></i></i>Dashboard</a> {% else %}
+            <a href="/dashboard" class="nav-bar-links"><i class="fa fa-graduation-cap" style="font-size:24px;"></i></i>Attendance</a> {%endif%}
+            <a href="/contact" class="nav-bar-links"><i class="fa  fa-phone"style="font-size:24px;"></i>Contact</a>
+            <a href="/about" class="nav-bar-links"><i class="fa fa-info"style="font-size:24px;"></i>About</a>
             <div class="dropdown">
-                <a href="/login"><i class='fa fa-user' id="menu" style='color:black;font-size:24px;'></i></a>
+                <a href="/login"><i class='fa fa-user' id="menu" ></i></a>
                 <div class="sub-menu">
                     <ul>
                         <li><a href="/login">Login</a></li>
                         <li><a href="/signup">Register</a></li>
-                        <li><a href="/logout" class="last-child">Log Out</a></li>
+                        <li class="last-child"><a href="/logout">Log Out</a></li>
                     </ul>
 
                 </div>
@@ -168,12 +196,10 @@
     {%endfor%}
 
     <div class="sign-up-form">
-        <h1 style="padding-left:50px;font-weight:lighter;text-align:center;margin-top:1px;margin-bottom:15px;">Register</h1>
-        <br>
         <form method="POST">
-            {{form.hidden_tag()}} {{form.name()}} {{form.email}} {{form.password_hash}}
-            <br> {{form.submit(class="submit-button")}}
-
+            <fieldset><legend><i class="fa-solid fa-user" id="profile-pic"></i></legend>
+                {{form.hidden_tag()}} {{form.name()}} {{form.email}} {{form.password_hash}}
+                <br> {{form.submit(class="submit-button")}}</fieldset>
         </form>
     </div>
     <script>
