--- a/templates/about.html
+++ b/templates/about.html
@@ -1,178 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
+{%extends 'base.html'%}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <title>{%block title %}Home{% endblock %}</title>
-
-    <style>
-        .nav-bar {
-            overflow: hidden;
-            text-align: right;
-            display: inline;
-            padding-left: 600px;
-        }
-        
-        .company-name {
-            display: inline-block;
-            font-size: 20px;
-            padding-bottom: 2px;
-            text-align: left;
-            padding-left: 25px;
-            margin-top: 15px;
-        }
-        
-        a {
-            text-decoration: none;
-            color: inherit;
-        }
-        
-        .nav-bar-links {
-            text-decoration: none;
-            color: inherit;
-            display: inline;
-            padding-right: 20px;
-            font-size: 15px;
-            font-family: verdana;
-            text-decoration-color: black;
-            text-decoration-style: solid;
-        }
-        
-        .sticky {
-            position: fixed;
-        }
-        
-        .white-background {
-            background: #454545;
-            height: 100px;
-            color: white;
-            padding-top: 20px;
-            padding-bottom: 20px;
-        }
-        
-        .sub-menu {
-            display: none;
-            position: absolute;
-        }
-        
-        .dropdown {
-            display: inline
-        }
-        
-        .dropdown:hover .sub-menu {
-            display: inline-block;
-            position: absolute;
-            text-align: right;
-            background-color: #454545;
-            margin: none;
-        }
-        
-        ul {
-            list-style-type: none;
-            padding-left: 0px;
-            text-align: right;
-        }
-        
-        .sub-menu ul li {
-            border: 1px solid black;
-            border-bottom: 1px solid black;
-            padding: 10px;
-        }
-        
-        .last-child {
-            border-bottom: none;
-            text-align: left;
-        }
-        
-        body {
-            background: url('https://s8.gifyu.com/images/scan.gif');
-            background-repeat: no-repeat;
-            background-position: center 100px;
-            background-color: none;
-        }
-        .typewriter{ 
-        font-family:monospace;
-        animation:typing 4s steps(5) infinite;
-        white-space:nowrap;
-        overflow:hidden;
-        
-    }
-    @keyframes typing {
-        0% {width:0}
-        30% {width:5ch; }
-        80%{width:5ch; }
-        90%{width:0ch; }
-        100%{width:0ch; }
-
-    }
-        
-        
-    </style>
-
-</head>
-
-<body>
-
-
-    <div class="white-background">
-        <a href="/home" class="company-name"><img src="https://i.ibb.co/HrPwhKr/logo.png" alt="logo" width="200px;"></a>
-        <div class="nav-bar">
-            <a href="/home" class="nav-bar-links"><i class="fa fa-home" style="color:black;font-size:24px;"></i>Home</a> {% if current_user.id == 1 %}
-            <a href="/dashboard" class="nav-bar-links"><i class="fa fa-graduation-cap" style="color:black;font-size:24px;"></i></i>Dashboard</a> {% else %}
-            <a href="/dashboard" class="nav-bar-links"><i class="fa fa-graduation-cap" style="color:black;font-size:24px;"></i></i>Attendance</a> {%endif%}
-
-            <a href="/contact" class="nav-bar-links"><i class="fa  fa-phone" style="color:black;font-size:24px;"></i>Contact</a>
-            <a href="/about" class="nav-bar-links"><i class="fa fa-info" style="color:black;font-size:24px;"></i>About</a>
-            <div class="dropdown">
-                <a href="/login"><i class='fa fa-user' id="menu" style='color: black;font-size:30px;margin-left:30px;'></i></a>
-                <div class="sub-menu">
-                    <ul>
-                        <li><a href="/login">Login</a></li>
-                        <li><a href="/signup">Register</a></li>
-                        <li class="last-child"><a href="/logout">Log Out</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    {% for message in get_flashed_messages()%}
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-        <strong>{{message}}</strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-            </button>
-    </div>
-    {%endfor%}
-
-
-
-
-
-
-
-    
-    <script>
-        window.onscroll = function() {
-            myFunction()
-        };
-
-        var navbar = document.getElementsByClassName("nav-bar");
-        var sticky = navbar.offsetTop;
-
-        function myFunction() {
-            if (window.pageYOffset >= sticky) {
-                navbar.classList.add("sticky")
-            } else {
-                navbar.classList.remove("sticky");
-            }
-        }
-    </script>
-</body>
-
+{%block title%}About Us{%endblock%}
