--- a/templates/signup.html
+++ b/templates/signup.html
@@ -81,6 +81,8 @@
             display: inline-block;
             position: absolute;
             text-align: right;
+            background:inherit;
+            margin:none;
         }
         
         ul {
@@ -93,6 +95,7 @@
             border: 1px solid black;
             border-bottom: 1px solid black;
             padding: 10px;
+            font-size:20px;
         }
         
         .sub-menu ul li .last-child {
@@ -100,66 +103,86 @@
         }
         
         body{
-            background:rgba(218, 139, 139, 1);
+            background:#838E97;
             background-size:cover;
             animation:color-change 10s ease infinite;
         }
         
         .sign-up-form {
-            border:1px solid white;
-            background-color: inherit;
-            height: 385px;
-            width: 530px;
-            padding-top: 20px;
+            border:1px solid black;
+            background-color:#262526;
+            height: 490px;
+            width: 950px;
+            padding-top: 10px;
             padding-bottom: 5px;
             padding-left: 5px;
-            align-items:center;
-            margin-top: 50px;
+            margin:0 auto;
+            margin-top: 30px;
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+            
         }
-        
+        .sign-up-form i{
+           margin-left:250px;
+            align-items: center;
+            margin-bottom:30px;
+            margin-top:10px;
+        }
         .sign-up-form input {
             display: block;
             padding-bottom: 3px;
-            width: 500px;
+            width: 400px;
             height: 40px;
             margin-bottom: 20px;
             margin-left: 10px;
             border-radius: 2px;
             border: 1px solid #E1D9D1;
             margin-top: 5px;
+            background:inherit;
         }
         
-        .sign-up-form input::placeholder {
-            padding-left: 10px;
-        }
+        
         
         .submit-button {
-            border: 1px solid black;
-            color: black;
-            background-color:white;
+            color: white;
+            font-weight: 200;
+            font-size:20px;
+            background-color:#1B8FFF;
             padding: 7px 7px 7px 7px;
             margin-left: 10px;
-            margin-top: 7px;
+            margin-top: 20px;
             border-radius: 3px;
             text-align: center;
             cursor: pointer;
         }
-        @keyframes color-change{
-            0% {background-color:#6978C9;}
-        50% {background-color:#FFB9AE}
-        100% {background-color:#48B5CF}
-        }
         #profile-pic {
             font-size:50px;
-            padding:15px;
-            border-radius:50%;
-            margin-left:200px;
             color:white;
             font-weight:1;
             background-color: inherit;
             
             
         }
+        .image {
+            float:left;
+            margin-right:70px;
+            padding-top:20px;
+        }
+        .company {
+margin-top:30px;
+margin-bottom:50px;
+font-size:2.1em;
+font-weight:200;
+color:white;
+
+display:inline-block;
+text-align:center;
+margin-left:140px;
+}
+@keyframes color-change{
+        0% {background:linear-gradient(rgba(211, 187, 187, 1), rgba(211, 199, 187, 1));}
+        50% {background:linear-gradient(rgba(199, 206, 192, 1), rgba(192, 206, 192, 1))}
+        100% {background:linear-gradient(rgba(186, 212, 199, 1), rgba(186, 212, 212, 1))}
+    }
     </style>
 </head>
 
@@ -197,9 +220,13 @@
 
     <div class="sign-up-form">
         <form method="POST">
-            <fieldset><legend><i class="fa-solid fa-user" id="profile-pic"></i></legend>
+            <img src="https://i.ibb.co/9yMV34N/signup.png" alt="signup" class="image">
+            
+                <div>
+                    <h2 class="company">Register</h2>
                 {{form.hidden_tag()}} {{form.name()}} {{form.email}} {{form.password_hash}}
-                <br> {{form.submit(class="submit-button")}}</fieldset>
+                <br>{{form.submit(class="submit-button")}}</div>
+                
         </form>
     </div>
     <script>
